--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -120,18 +120,15 @@ jobs:
       - name: Run npm setup
         run: npm run setup
 
-      - name: Run npm build free release apk
+      - name: Run npm build paid release apk
         run: |
           node utils/storage_manager.mjs y
-          npm run build free prod apk
+          npm run build paid apk
           # 显式调用Gradle release构建
           cd platforms/android
           ./gradlew clean
-          ./gradlew processReleaseResources
-          ./gradlew compileReleaseSources
           ./gradlew assembleRelease
           ls app/build/outputs/apk/release/*.apk
-          # ls app/build/outputs/apk/*.apk
           mv app/build/outputs/apk/release/app-release-unsigned.apk /tmp/acode-unsigned.apk
           
       - name: Sign the apk (PKCS12)
@@ -154,15 +151,7 @@ jobs:
           rm -f ${{ env.STORE_FILE_PATH }} ${{ env.BUILD_JSON_PATH }}
           echo "Keystore and build.json removed successfully."
       
-      - name: Prepare release assets
-        id: prepare_assets
-        run: |
-          echo "Prepared release assets for GitHub release"
-          echo "NORMAL_APK_PATH=/tmp/acode-release-normal.apk" >> $GITHUB_OUTPUT
-          # echo "FDROID_APK_PATH=/tmp/acode-release-fdroid.apk" >> $GITHUB_OUTPUT
-      
       - name: Create GitHub release with apk
-        id: release_normal
         uses: softprops/action-gh-release@master
         with:
           tag_name: ${{ env.BUILD_DATE }}-acode
